--- a/1.2 CHANGELOG.md
+++ b/1.2 CHANGELOG.md
@@ -1,35 +1,16 @@
 1.2 - CHANGELOG
--temporarily deleted Warrok Kurniwian boss because of a bug that made him being unkillable
--rewrited the combat system player hit calculations - hopefully fixed all bugs that made enemies unkillable under certain circumstances
--fixed stats not being reseted correctly on death or on leaving to main menu 
--fixed a bug which will lead into unequipable weapons
--fixed a bug which would block you from opening the "roll credits" menu
--fixed some wall colliders that you could walk through
--fixed a bug which let you easily abuse the fake floor puzzle room by quickly clicking on "fast" or "jump" walking speed presets (adjusted the gravity to be 10x the normal value lol)
--fixed a bug which prevented you from picking up the Warhammer and Shield items after you've dropped them onto the ground
+- ##### temporarily deleted Warrok Kurniwian boss because of a bug that made him being unkillable
+- ##### rewrited the combat system player hit calculations - hopefully fixed all bugs that made enemies unkillable under certain circumstances
+- ##### fixed stats not being reseted correctly on death or on leaving to main menu 
+- ##### fixed a bug which will lead into unequipable weapons
+- ##### fixed a bug which would block you from opening the "roll credits" menu
+- ##### fixed some wall colliders that you could walk through
+- ##### fixed a bug which let you easily abuse the fake floor puzzle room by quickly clicking on "fast" or "jump" walking speed presets (adjusted the gravity to be 10x the normal value lol)
+- ##### fixed a bug which prevented you from picking up the Warhammer and Shield items after you've dropped them onto the ground
 
--fixed a bug which lead to strength potion actually not being dropped when dropped onto the ground
--fixed a bug which lead to the game sometimes loading you into the settings menu instead of the main menu 
--fixed a bug that activated the trap at the hallway with swinging axes even though the player was not standing on the trap tile 
--fixed a bug that sometimes activated traps when the player rotated at a tile next to  a trap tile
--fixed a bug that lead to the player being teleported when rotating at the portal next to the lever puzzle room
-
-
-
-
-
-
-
-
-
-
-PLASTISCM - COMMIT TEXT
-bug fixes v12
-
--fixed a bug that loaded you into the settings menu instead of the main menu 
--fixed a bug that activated the trap at the hallway with swinging axes even though the player was not standing on the trap tile 
--fixed a bug which lead to shield being unpickable after dropped onto the ground
--fixed a bug which lead to strength potion actually not being dropped when dropped
--fixed a bug that sometimes activated traps when the player rotated at a tile next to  a trap tile
--fixed a bug that lead to the player being teleported when rotating at the portal next to the lever puzzle room
+- ##### fixed a bug which lead to strength potion actually not being dropped when dropped onto the ground
+- ##### fixed a bug which lead to the game sometimes loading you into the settings menu instead of the main menu 
+- ##### fixed a bug that activated the trap at the hallway with swinging axes even though the player was not standing on the trap tile 
+- ##### fixed a bug that sometimes activated traps when the player rotated at a tile next to  a trap tile
+- ##### fixed a bug that lead to the player being teleported when rotating at the portal next to the lever puzzle room
  
