--- a/1.2 CHANGELOG.md
+++ b/1.2 CHANGELOG.md
@@ -1,4 +1,7 @@
-1.2 - CHANGELOG
+
+
+# 1.2 - CHANGELOG
+## this version will be released on 22.4.2023
 - ##### temporarily deleted Warrok Kurniwian boss because of a bug that made him being unkillable
 - ##### rewrited the combat system player hit calculations - hopefully fixed all bugs that made enemies unkillable under certain circumstances
 - ##### fixed stats not being reseted correctly on death or on leaving to main menu 
