--- a/1.2 CHANGELOG.md
+++ b/1.2 CHANGELOG.md
@@ -16,4 +16,12 @@
 - ##### fixed a bug that activated the trap at the hallway with swinging axes even though the player was not standing on the trap tile 
 - ##### fixed a bug that sometimes activated traps when the player rotated at a tile next to  a trap tile
 - ##### fixed a bug that lead to the player being teleported when rotating at the portal next to the lever puzzle room
+- ##### fixed a bug that caused the actions on items (drop, equip) to not hide after equipping the item 
+- ##### fixed a bug that lead to the item actions showing only after clicking on the item twice (only for the first time you were trying to show the actions on that item)
+- ##### adjusted sound volumes of certain gates and enemies 
+- ##### fixed a bug that caused weird calculations on item equipping
+- ##### fixed a bug that prevented you from picking up iron and gold key after you've dropped it
+- ##### fixed a bug that lead to sword or warhammer icon going out of the screen instead into the inventory panel when equipping the other currently unequiped type of weapon
+- ##### fixed a bug that caused stats to not calculate correctly when dropping a item on the ground
+- ##### fixed a bug that lead the boss only attacking once
  
